--- a/sysutils/eza/Makefile.crates
+++ b/sysutils/eza/Makefile.crates
@@ -59,7 +59,7 @@ CARGO_CRATES=	aho-corasick-1.0.5 \
 		iana-time-zone-0.1.57 \
 		iana-time-zone-haiku-0.1.2 \
 		idna-0.2.3 \
-		indexmap-2.1.0 \
+		indexmap-2.5.0 \
 		is-terminal-0.4.9 \
 		itertools-0.10.5 \
 		itoa-1.0.9 \
@@ -83,7 +83,6 @@ CARGO_CRATES=	aho-corasick-1.0.5 \
 		number_prefix-0.4.0 \
 		once_cell-1.19.0 \
 		oorandom-11.1.3 \
-		openssl-src-111.26.0+1.1.1u \
 		openssl-sys-0.9.61 \
 		option-ext-0.2.0 \
 		os_pipe-1.1.4 \
@@ -121,11 +120,11 @@ CARGO_CRATES=	aho-corasick-1.0.5 \
 		ryu-1.0.15 \
 		same-file-1.0.6 \
 		scopeguard-1.2.0 \
-		serde-1.0.193 \
-		serde_derive-1.0.193 \
+		serde-1.0.210 \
+		serde_derive-1.0.210 \
 		serde_json-1.0.107 \
+		serde_norway-0.9.38 \
 		serde_spanned-0.6.5 \
-		serde_yaml-0.9.29 \
 		shlex-1.3.0 \
 		similar-2.2.1 \
 		siphasher-0.3.11 \
@@ -150,7 +149,7 @@ CARGO_CRATES=	aho-corasick-1.0.5 \
 		unicode-ident-1.0.11 \
 		unicode-normalization-0.1.17 \
 		unicode-width-0.1.13 \
-		unsafe-libyaml-0.2.10 \
+		unsafe-libyaml-0.2.11 \
 		url-2.2.1 \
 		utf8parse-0.2.1 \
 		uutils_term_grid-0.6.0 \
