--- a/www/freenginx-devel/Makefile.extmod
+++ b/www/freenginx-devel/Makefile.extmod
@@ -18,14 +18,14 @@ OPTIONS_GROUP_THIRDPARTYGRP=	AJP BROTLI CACHE_PURGE \
 AJP_GH_TUPLE=		msva:nginx_ajp_module:fcbb2cc:ajp
 AJP_VARS=		DSO_EXTMODS+=ajp
 
-ARRAYVAR_IMPLIES=	DEVEL_KIT
 ARRAYVAR_GH_TUPLE=	openresty:array-var-nginx-module:v0.06:arrayvar
+ARRAYVAR_IMPLIES=	DEVEL_KIT
 ARRAYVAR_VARS=		DSO_EXTMODS+=arrayvar
 
-BROTLI_LIB_DEPENDS=	libbrotlicommon.so:archivers/brotli
 BROTLI_GH_TUPLE=	google:ngx_brotli:a71f931:brotli
-BROTLI_VARS=		DSO_EXTMODS+=brotli
 BROTLI_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_brotli_filter_config
+BROTLI_LIB_DEPENDS=	libbrotlicommon.so:archivers/brotli
+BROTLI_VARS=		DSO_EXTMODS+=brotli
 
 CACHE_PURGE_GH_TUPLE=	nginx-modules:ngx_cache_purge:2.5.5:cache_purge
 CACHE_PURGE_VARS=	DSO_EXTMODS+=cache_purge
@@ -33,30 +33,30 @@ CACHE_PURGE_VARS=	DSO_EXTMODS+=cache_purge
 ECHO_GH_TUPLE=		openresty:echo-nginx-module:b0f344b:echo
 ECHO_VARS=		DSO_EXTMODS+=echo
 
-DRIZZLE_LIB_DEPENDS=	libdrizzle.so:databases/libdrizzle
-DRIZZLE_CONFIGURE_ENV=	LIBDRIZZLE_INC=${LOCALBASE}/include \
-			LIBDRIZZLE_LIB=${LOCALBASE}/lib
 DRIZZLE_GH_TUPLE=	openresty:drizzle-nginx-module:c631276:drizzle
+DRIZZLE_CONFIGURE_ENV=	LIBDRIZZLE_INC=${LOCALBASE}/include \
 DRIZZLE_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-openresty-drizzle-nginx-module-config
+DRIZZLE_LIB_DEPENDS=	libdrizzle.so:databases/libdrizzle
+			LIBDRIZZLE_LIB=${LOCALBASE}/lib
 DRIZZLE_VARS=		DSO_EXTMODS+=drizzle
 
-DYNAMIC_UPSTREAM_IMPLIES=	STREAM
 DYNAMIC_UPSTREAM_GH_TUPLE=	ZigzagAK:ngx_dynamic_upstream:ab67fe7:dynamic_upstream
+DYNAMIC_UPSTREAM_IMPLIES=	STREAM
 DYNAMIC_UPSTREAM_VARS=		DSO_EXTMODS+=dynamic_upstream
 
 DEVEL_KIT_GH_TUPLE=		vision5:ngx_devel_kit:v0.3.4:devel_kit
 DEVEL_KIT_USES=			iconv
 DEVEL_KIT_VARS=			FIRST_DSO_EXTMODS+=devel_kit
 
-ENCRYPTSESSION_IMPLIES=		DEVEL_KIT
 ENCRYPTSESSION_GH_TUPLE=	openresty:encrypted-session-nginx-module:7ffe4ec:encryptsession
+ENCRYPTSESSION_IMPLIES=		DEVEL_KIT
 ENCRYPTSESSION_VARS=		DSO_EXTMODS+=encryptsession
 
 FIPS_CHECK_GH_TUPLE=	ogarrett:nginx-fips-check-module:6cb4270:fipscheck
 FIPS_CHECK_VARS=	DSO_EXTMODS+=fipscheck
 
-FORMINPUT_IMPLIES=	DEVEL_KIT
 FORMINPUT_GH_TUPLE=	calio:form-input-nginx-module:v0.12:forminput
+FORMINPUT_IMPLIES=	DEVEL_KIT
 FORMINPUT_VARS=		DSO_EXTMODS+=forminput
 
 GRIDFS_GH_TUPLE=	nieoding:nginx-gridfs:059bdc3:gridfs
@@ -80,8 +80,8 @@ HTTP_AUTH_JWT_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_auth_jwt_module.c
 HTTP_AUTH_JWT_VARS=		DSO_EXTMODS+=auth_jwt
 
 HTTP_AUTH_KRB5_GH_TUPLE=	stnoonan:spnego-http-auth-nginx-module:v1.1.3:auth_krb5
-HTTP_AUTH_KRB5_VARS=		DSO_EXTMODS+=auth_krb5
 HTTP_AUTH_KRB5_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-spnego-http-auth-nginx-module-config
+HTTP_AUTH_KRB5_VARS=		DSO_EXTMODS+=auth_krb5
 
 HTTP_AUTH_LDAP_GH_TUPLE=	kvspb:nginx-auth-ldap:241200e:http_auth_ldap
 HTTP_AUTH_LDAP_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_auth_ldap_module.c
@@ -91,12 +91,12 @@ HTTP_AUTH_LDAP_USES=		ldap
 HTTP_AUTH_PAM_GH_TUPLE=		sto:ngx_http_auth_pam_module:v1.5.5:auth_pam
 HTTP_AUTH_PAM_VARS=		DSO_EXTMODS+=auth_pam
 
+HTTP_DAV_EXT_GH_TUPLE=		arut:nginx-dav-ext-module:v3.0.0:dav_ext
+HTTP_DAV_EXT_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_dav_ext_module.c
 HTTP_DAV_EXT_IMPLIES=		HTTP_DAV
 HTTP_DAV_EXT_LIB_DEPENDS=	libxml2.so:textproc/libxml2 \
 				libxslt.so:textproc/libxslt
-HTTP_DAV_EXT_GH_TUPLE=		arut:nginx-dav-ext-module:v3.0.0:dav_ext
 HTTP_DAV_EXT_VARS=		DSO_EXTMODS+=dav_ext
-HTTP_DAV_EXT_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_dav_ext_module.c
 
 HTTP_EVAL_GH_TUPLE=		openresty:nginx-eval-module:13425e8:eval
 HTTP_EVAL_VARS=			DSO_EXTMODS+=eval
@@ -105,13 +105,13 @@ HTTP_FANCYINDEX_GH_TUPLE=	aperezdc:ngx-fancyindex:cbc0d3f:fancyindex
 HTTP_FANCYINDEX_VARS=		DSO_EXTMODS+=fancyindex
 
 HTTP_FOOTER_GH_TUPLE=		alibaba:nginx-http-footer-filter:1.2.2:footer
-HTTP_FOOTER_VARS=		DSO_EXTMODS+=footer
 HTTP_FOOTER_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-nginx-http-footer-filter-config
+HTTP_FOOTER_VARS=		DSO_EXTMODS+=footer
 
 HTTP_GEOIP2_GH_TUPLE=		leev:ngx_http_geoip2_module:445df24:geoip2
 HTTP_GEOIP2_CFLAGS=		-I${LOCALBASE}/include
-HTTP_GEOIP2_VARS=		DSO_EXTMODS+=geoip2
 HTTP_GEOIP2_LIB_DEPENDS=	libmaxminddb.so:net/libmaxminddb
+HTTP_GEOIP2_VARS=		DSO_EXTMODS+=geoip2
 
 HTTP_IP2LOCATION_GH_TUPLE=	ip2location:ip2location-nginx:5f2c59a:ip2location
 HTTP_IP2LOCATION_LIB_DEPENDS=	libIP2Location.so:net/ip2location
@@ -122,8 +122,8 @@ HTTP_IP2PROXY_LIB_DEPENDS=	libIP2Proxy.so:net/ip2proxy
 HTTP_IP2PROXY_VARS=		DSO_EXTMODS+=ip2proxy
 
 HTTP_JSON_STATUS_GH_TUPLE=	nginx-modules:ngx_http_json_status_module:c77dff4:json_status
-HTTP_JSON_STATUS_VARS=		DSO_EXTMODS+=json_status
 HTTP_JSON_STATUS_EXTRA_PATCHES= ${PATCHDIR}/extra-patch-ngx_http_json_status_module-config
+HTTP_JSON_STATUS_VARS=		DSO_EXTMODS+=json_status
 
 HTTP_MOGILEFS_MASTER_SITES=	http://www.grid.net.ru/nginx/download/:mogilefs
 HTTP_MOGILEFS_DISTFILES=	nginx_mogilefs_module-1.0.4.tar.gz:mogilefs
@@ -150,15 +150,15 @@ HTTP_SLICE_AHEAD_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-src_http_modules_ngx_htt
 HTTP_SUBS_FILTER_GH_TUPLE=	yaoweibin:ngx_http_substitutions_filter_module:e12e965:subs_filter
 HTTP_SUBS_FILTER_VARS=		DSO_EXTMODS+=subs_filter
 
+HTTP_TARANTOOL_GH_TUPLE=	tarantool:nginx_upstream_module:aeb8696:nginx_tarantool
+HTTP_TARANTOOL_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_tarantool-config
 HTTP_TARANTOOL_LIB_DEPENDS=	libmsgpuck.so:devel/msgpuck \
 				libyajl.so:devel/yajl
-HTTP_TARANTOOL_GH_TUPLE=	tarantool:nginx_upstream_module:aeb8696:nginx_tarantool
 HTTP_TARANTOOL_VARS=		DSO_EXTMODS+=nginx_tarantool
-HTTP_TARANTOOL_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_tarantool-config
 
 HTTP_UPLOAD_GH_TUPLE=		fdintino:nginx-upload-module:96e6460:upload
-HTTP_UPLOAD_VARS=		DSO_EXTMODS+=upload
 HTTP_UPLOAD_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_http_upload_module.c
+HTTP_UPLOAD_VARS=		DSO_EXTMODS+=upload
 
 HTTP_UPLOAD_PROGRESS_GH_TUPLE=		masterzen:nginx-upload-progress-module:v0.9.3:uploadprogress
 HTTP_UPLOAD_PROGRESS_VARS=		DSO_EXTMODS+=uploadprogress
@@ -166,28 +166,28 @@ HTTP_UPLOAD_PROGRESS_VARS=		DSO_EXTMODS+=uploadprogress
 HTTP_UPSTREAM_FAIR_GH_TUPLE=		jaygooby:nginx-upstream-fair:10ecdcf:upstreamfair
 HTTP_UPSTREAM_FAIR_VARS=		DSO_EXTMODS+=upstreamfair
 
-HTTP_UPSTREAM_STICKY_IMPLIES=		HTTP_SSL
 HTTP_UPSTREAM_STICKY_GH_TUPLE=		gdongca:nginx-sticky-module-ng:a3263ad:upstreamsticky
+HTTP_UPSTREAM_STICKY_IMPLIES=		HTTP_SSL
 HTTP_UPSTREAM_STICKY_VARS=		DSO_EXTMODS+=upstreamsticky
 
+HTTP_VIDEO_THUMBEXTRACTOR_GH_TUPLE=	wandenberg:nginx-video-thumbextractor-module:e81f850:vte
+HTTP_VIDEO_THUMBEXTRACTOR_EXTRA_PATCHES=${PATCHDIR}/extra-patch-nginx-thumbextractor-module-config
 HTTP_VIDEO_THUMBEXTRACTOR_LIB_DEPENDS=	libavformat.so:multimedia/ffmpeg \
 					libavcodec.so:multimedia/ffmpeg \
 					libavutil.so:multimedia/ffmpeg \
 					libswscale.so:multimedia/ffmpeg
 HTTP_VIDEO_THUMBEXTRACTOR_USES=		jpeg
-HTTP_VIDEO_THUMBEXTRACTOR_GH_TUPLE=	wandenberg:nginx-video-thumbextractor-module:e81f850:vte
 HTTP_VIDEO_THUMBEXTRACTOR_VARS=		DSO_EXTMODS+=vte
-HTTP_VIDEO_THUMBEXTRACTOR_EXTRA_PATCHES=${PATCHDIR}/extra-patch-nginx-thumbextractor-module-config
 
 HTTP_ZIP_GH_TUPLE=	vince2678:mod_zip:39dc908:mod_zip
 HTTP_ZIP_USES=		iconv
 HTTP_ZIP_VARS=		DSO_EXTMODS+=mod_zip
 
+ICONV_GH_TUPLE=		calio:iconv-nginx-module:v0.14:iconv
+ICONV_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-calio-iconv-nginx-module-config
 ICONV_IMPLIES=		DEVEL_KIT
 ICONV_USES=		iconv
-ICONV_GH_TUPLE=		calio:iconv-nginx-module:v0.14:iconv
 ICONV_VARS=		DSO_EXTMODS+=iconv
-ICONV_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-calio-iconv-nginx-module-config
 
 KEYVAL_GH_TUPLE=	kjdev:nginx-keyval:bb04325:keyval
 KEYVAL_VARS=		DSO_EXTMODS+=keyval
@@ -195,21 +195,21 @@ KEYVAL_VARS=		DSO_EXTMODS+=keyval
 LET_GH_TUPLE=		baysao:nginx-let-module:c1f23aa:let
 LET_VARS=		DSO_EXTMODS+=let
 
-LUA_IMPLIES=		DEVEL_KIT
-LUA_LIB_DEPENDS=	libluajit-5.1.so:lang/luajit-openresty
-LUA_CONFIGURE_ENV=	LUAJIT_INC=${LOCALBASE}/include/luajit-2.1 \
-			LUAJIT_LIB=${LOCALBASE}/lib
 LUA_GH_TUPLE=		openresty:lua-nginx-module:de02114:lua \
 			openresty:lua-resty-core:0b61f61:luarc \
 			openresty:lua-resty-lrucache:1759068:luarl
+LUA_CONFIGURE_ENV=	LUAJIT_INC=${LOCALBASE}/include/luajit-2.1 \
+			LUAJIT_LIB=${LOCALBASE}/lib
+LUA_IMPLIES=		DEVEL_KIT
+LUA_LIB_DEPENDS=	libluajit-5.1.so:lang/luajit-openresty
 LUA_VARS=		DSO_EXTMODS+=lua
 
+LUASTREAM_GH_TUPLE=	openresty:stream-lua-nginx-module:v0.0.17:luastream
+LUASTREAM_CONFIGURE_ENV=LUAJIT_INC=${LOCALBASE}/include/luajit-2.1 \
 LUASTREAM_IMPLIES=	DEVEL_KIT
 LUASTREAM_LIB_DEPENDS=	libluajit-5.1.so:lang/luajit-openresty
 LUASTREAM_RUN_DEPENDS=	lua-resty-core>0:www/lua-resty-core
-LUASTREAM_CONFIGURE_ENV=LUAJIT_INC=${LOCALBASE}/include/luajit-2.1 \
 			LUAJIT_LIB=${LOCALBASE}/lib
-LUASTREAM_GH_TUPLE=	openresty:stream-lua-nginx-module:v0.0.17:luastream
 LUASTREAM_VARS=		DSO_EXTMODS+=luastream
 
 LINK_GH_TUPLE=		Taymindis:nginx-link-function:3.2.4:link
@@ -220,9 +220,11 @@ LINK_VARS=		DSO_EXTMODS+=link
 MEMC_GH_TUPLE=		openresty:memc-nginx-module:v0.20:memc
 MEMC_VARS=		DSO_EXTMODS+=memc
 
-MODSECURITY3_IMPLIES=		HTTP_ADDITION HTTP_IMAGE_FILTER HTTP_GUNZIP_FILTER HTTP_XSLT
-MODSECURITY3_LIB_DEPENDS=	libmodsecurity.so:security/modsecurity3
 MODSECURITY3_GH_TUPLE=		owasp-modsecurity:ModSecurity-nginx:fd28e6a:modsecurity3
+MODSECURITY3_IMPLIES=		HTTP_ADDITION HTTP_IMAGE_FILTER HTTP_GUNZIP_FILTER HTTP_XSLT
+MODSECURITY3_LDFLAGS=		-lpcre
+MODSECURITY3_LIB_DEPENDS=	libmodsecurity.so:security/modsecurity3 \
+				libpcre.so:devel/pcre
 MODSECURITY3_VARS=		DSO_EXTMODS+=modsecurity3
 
 NATS_GH_TUPLE=		nats-io:nginx-nats:6f7adf1:nats
@@ -232,45 +234,48 @@ NATS_VARS=		DSO_EXTMODS+=nats NATS_SUBDIR=/src
 NAXSI_NGINX_VER=	1.7
 NAXSI_GH_TUPLE=		wargio:naxsi:${NAXSI_NGINX_VER}:naxsi \
 			libinjection:libinjection:b9fcaaf:libinjection
-NAXSI_VARS=		DSO_EXTMODS+=naxsi NAXSI_SUBDIR=/naxsi_src
 NAXSI_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-naxsi-libinjection__sqli_c \
 			${PATCHDIR}/extra-patch-naxsi_config
+NAXSI_VARS=		DSO_EXTMODS+=naxsi NAXSI_SUBDIR=/naxsi_src
 
 NJS_GH_TUPLE=		nginx:njs:0.9.5:njs
-NJS_CONFIGURE_ON=	--with-cc-opt="-I ${LOCALBASE}/include/quickjs"
+NJS_CFLAGS=		-I ${LOCALBASE}/include/quickjs
+NJS_CONFIGURE_ARGS=	--cc-opt="${CFLAGS}" --ld-opt="${LDFLAGS}" --with-quickjs
+NJS_IMPLIES=		HTTP STREAM
 NJS_LIB_DEPENDS=	libquickjs.so:lang/quickjs \
 			libxml2.so:textproc/libxml2 \
 			libxslt.so:textproc/libxslt
 NJS_VARS=		DSO_EXTMODS+=njs NJS_SUBDIR=/nginx
-NJS_IMPLIES=		HTTP STREAM
 
 OTEL_GH_TUPLE=		osokin:nginx-otel:51273ec:otel
-OTEL_VARS=		DSO_EXTMODS+=otel OTEL_SUBDIR=/
+OTEL_BUILD_DEPENDS=	${LOCALBASE}/include/opentelemetry/proto/common/v1/common.proto:devel/opentelemetry-proto
+OTEL_CONFIGURE_ENV=	NGX_OTEL_PROTO_DIR=${PREFIX}/include
 OTEL_LIB_DEPENDS=	libabsl_base.so:devel/abseil \
 			libcares.so:dns/c-ares \
 			libgrpc.so:devel/grpc \
 			libopentelemetry_common.so:devel/opentelemetry-cpp \
 			libprotobuf.so:devel/protobuf \
 			libre2.so:devel/re2
-OTEL_BUILD_DEPENDS=	${LOCALBASE}/include/opentelemetry/proto/common/v1/common.proto:devel/opentelemetry-proto
-OTEL_CONFIGURE_ENV+=	NGX_OTEL_PROTO_DIR=${PREFIX}/include
+OTEL_VARS=		DSO_EXTMODS+=otel OTEL_SUBDIR=/
 
 PASSENGER_NGINX_VER=	6.0.27
-PASSENGER_CATEGORIES=	ruby
-PASSENGER_USES=		ruby
-PASSENGER_BUILD_DEPENDS=${LOCALBASE}/bin/rake:devel/rubygem-rake
-PASSENGER_RAKE_BIN=	${LOCALBASE}/bin/rake
 PASSENGER_MASTER_SITES=	https://s3.amazonaws.com/phusion-passenger/releases/:passenger
 PASSENGER_DISTFILES=	passenger-${PASSENGER_NGINX_VER}.tar.gz:passenger
-PASSENGER_VARS=		WRKSRC_passenger=${WRKDIR}/passenger-${PASSENGER_NGINX_VER} \
-			DSO_EXTDIRS+=passenger-${PASSENGER_NGINX_VER}/src/nginx_module
+PASSENGER_BUILD_DEPENDS=${LOCALBASE}/bin/rake:devel/rubygem-rake
+PASSENGER_CATEGORIES=	ruby
+PASSENGER_CFLAGS=	-DNDEBUG
+PASSENGER_CONFIGURE_ENV=OPTIMIZE="yes" EXTRA_PRE_CXXFLAGS="-std=c++14"
 PASSENGER_EXTRA_PATCHES=${PATCHDIR}/extra-patch-passenger-build-nginx.rb \
 			${PATCHDIR}/extra-patch-passenger-disable-telemetry \
 			${PATCHDIR}/extra-patch-passenger-Configuration.c
+PASSENGER_RAKE_BIN=	${LOCALBASE}/bin/rake
+PASSENGER_USES=		ruby
+PASSENGER_VARS=		WRKSRC_passenger=${WRKDIR}/passenger-${PASSENGER_NGINX_VER} \
+			DSO_EXTDIRS+=passenger-${PASSENGER_NGINX_VER}/src/nginx_module
 
-POSTGRES_USES=		pgsql
 POSTGRES_GH_TUPLE=	konstruxi:ngx_postgres:8aa7359:postgres
 POSTGRES_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-ngx_postgres-config
+POSTGRES_USES=		pgsql
 POSTGRES_VARS=		DSO_EXTMODS+=postgres
 
 RDS_CSV_GH_TUPLE=	openresty:rds-csv-nginx-module:6a90686:rdscsv
@@ -286,8 +291,8 @@ REDIS2_VARS=		DSO_EXTMODS+=redis2
 RTMP_GH_TUPLE=		arut:nginx-rtmp-module:6c7719d:rtmp
 RTMP_VARS=		DSO_EXTMODS+=rtmp
 
-SET_MISC_IMPLIES=	DEVEL_KIT
 SET_MISC_GH_TUPLE=	openresty:set-misc-nginx-module:eb223c9:setmisc
+SET_MISC_IMPLIES=	DEVEL_KIT
 SET_MISC_VARS=		DSO_EXTMODS+=setmisc
 
 SFLOW_GH_TUPLE=		sflow:nginx-sflow-module:f15c87f:sflow
@@ -304,8 +309,8 @@ SLOWFS_CACHE_VARS=	DSO_EXTMODS+=slowfs_cache
 SRCACHE_GH_TUPLE=	openresty:srcache-nginx-module:bcdcfdc:srcache
 SRCACHE_VARS=		DSO_EXTMODS+=srcache
 
-STS_IMPLIES=		STREAM
 STS_GH_TUPLE=		vozlt:nginx-module-sts:3c10d42:sts
+STS_IMPLIES=		STREAM
 STS_VARS=		DSO_EXTMODS+=sts
 
 VOD_GH_TUPLE=		kaltura:nginx-vod-module:26f0687:vod
@@ -318,14 +323,14 @@ VTS_GH_TUPLE=		vozlt:nginx-module-vts:37d319f:vts
 VTS_VARS=		DSO_EXTMODS+=vts
 
 XSS_GH_TUPLE=		openresty:xss-nginx-module:de2d87a:xss
-XSS_VARS=		DSO_EXTMODS+=xss
 XSS_EXTRA_PATCHES=	${PATCHDIR}/extra-patch-xss-nginx-module-config
+XSS_VARS=		DSO_EXTMODS+=xss
 
 WEBSOCKIFY_GH_TUPLE=	tg123:websockify-nginx-module:c11bc9a:websockify
 WEBSOCKIFY_VARS=	DSO_EXTMODS+=websockify
 
-ZSTD_LIB_DEPENDS=	libzstd.so:archivers/zstd
+ZSTD_GH_TUPLE=		tokers:zstd-nginx-module:f4ba115:zstd
 ZSTD_CONFIGURE_ENV=	ZSTD_INC=${LOCALBASE}/include \
 			ZSTD_LIB=${LOCALBASE}/lib
-ZSTD_GH_TUPLE=		tokers:zstd-nginx-module:f4ba115:zstd
+ZSTD_LIB_DEPENDS=	libzstd.so:archivers/zstd
 ZSTD_VARS=		DSO_EXTMODS+=zstd
