--- a/editors/fresh/Makefile.crates
+++ b/editors/fresh/Makefile.crates
@@ -5,9 +5,9 @@ CARGO_CRATES=	adler2-2.0.1 \
 		allocator-api2-0.2.21 \
 		android_system_properties-0.1.5 \
 		anstyle-1.0.13 \
-		anyhow-1.0.100 \
+		anyhow-1.0.101 \
 		arboard-3.6.1 \
-		arc-swap-1.8.0 \
+		arc-swap-1.8.1 \
 		arrayvec-0.7.6 \
 		ascii-1.1.0 \
 		async-lock-3.4.2 \
@@ -29,13 +29,13 @@ CARGO_CRATES=	adler2-2.0.1 \
 		block-buffer-0.10.4 \
 		bstr-1.12.1 \
 		bumpalo-3.19.1 \
-		bytemuck-1.24.0 \
-		bytes-1.11.0 \
+		bytemuck-1.25.0 \
+		bytes-1.11.1 \
 		cached-0.56.0 \
 		cached_proc_macro-0.25.0 \
 		cached_proc_macro_types-0.1.1 \
 		castaway-0.2.4 \
-		cc-1.2.54 \
+		cc-1.2.55 \
 		cexpr-0.6.0 \
 		cfg-if-1.0.4 \
 		cfg_aliases-0.1.1 \
@@ -45,10 +45,10 @@ CARGO_CRATES=	adler2-2.0.1 \
 		chrono-0.4.43 \
 		chunked_transfer-1.5.0 \
 		clang-sys-1.8.1 \
-		clap-4.5.54 \
-		clap_builder-4.5.54 \
-		clap_derive-4.5.49 \
-		clap_lex-0.7.7 \
+		clap-4.5.58 \
+		clap_builder-4.5.58 \
+		clap_derive-4.5.55 \
+		clap_lex-1.0.0 \
 		clipboard-win-5.4.1 \
 		cobs-0.3.0 \
 		compact_str-0.9.0 \
@@ -77,7 +77,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		darling_macro-0.20.11 \
 		darling_macro-0.23.0 \
 		deltae-0.3.2 \
-		deranged-0.5.5 \
+		deranged-0.5.6 \
 		derive_more-2.1.1 \
 		derive_more-impl-2.1.1 \
 		digest-0.10.7 \
@@ -85,9 +85,10 @@ CARGO_CRATES=	adler2-2.0.1 \
 		dirs-sys-0.5.0 \
 		dispatch2-0.3.0 \
 		displaydoc-0.2.5 \
+		doctest-file-1.0.0 \
 		document-features-0.2.12 \
 		downcast-rs-1.2.1 \
-		dragonbox_ecma-0.1.0 \
+		dragonbox_ecma-0.1.12 \
 		dtor-0.1.1 \
 		dtor-proc-macro-0.0.6 \
 		dyn-clone-1.0.20 \
@@ -113,21 +114,23 @@ CARGO_CRATES=	adler2-2.0.1 \
 		fancy-regex-0.16.2 \
 		fastrand-2.3.0 \
 		filedescriptor-0.8.3 \
-		find-msvc-tools-0.1.8 \
+		find-msvc-tools-0.1.9 \
 		finl_unicode-1.4.0 \
 		fixedbitset-0.4.2 \
 		fixedbitset-0.5.7 \
-		flate2-1.1.8 \
+		flate2-1.1.9 \
 		fluent-uri-0.1.4 \
 		fnv-1.0.7 \
 		foldhash-0.1.5 \
 		foldhash-0.2.0 \
 		form_urlencoded-1.2.2 \
+		futures-core-0.3.31 \
 		futures-io-0.3.31 \
 		generic-array-0.14.7 \
 		gethostname-1.1.0 \
 		getrandom-0.2.17 \
 		getrandom-0.3.4 \
+		getrandom-0.4.1 \
 		glob-0.3.3 \
 		globset-0.4.18 \
 		globwalk-0.8.1 \
@@ -140,7 +143,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		http-1.4.0 \
 		httparse-1.10.1 \
 		httpdate-1.0.3 \
-		iana-time-zone-0.1.64 \
+		iana-time-zone-0.1.65 \
 		iana-time-zone-haiku-0.1.2 \
 		icu_collections-1.5.0 \
 		icu_collections-2.1.1 \
@@ -159,6 +162,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		icu_provider-1.5.0 \
 		icu_provider-2.1.1 \
 		icu_provider_macros-1.5.0 \
+		id-arena-2.3.0 \
 		ident_case-1.0.1 \
 		idna-1.1.0 \
 		idna_adapter-1.2.1 \
@@ -167,8 +171,9 @@ CARGO_CRATES=	adler2-2.0.1 \
 		include_dir_macros-0.7.4 \
 		indexmap-2.13.0 \
 		indoc-2.0.7 \
-		insta-1.46.1 \
+		insta-1.46.3 \
 		instability-0.3.11 \
+		interprocess-2.3.1 \
 		is-docker-0.2.0 \
 		is-wsl-0.4.0 \
 		itertools-0.11.0 \
@@ -180,6 +185,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		kasuari-0.4.11 \
 		lab-0.11.0 \
 		lazy_static-1.5.0 \
+		leb128fmt-0.1.0 \
 		libc-0.2.180 \
 		libloading-0.8.9 \
 		libloading-0.9.0 \
@@ -196,7 +202,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		lsp-types-0.97.0 \
 		mac_address-1.1.8 \
 		matchers-0.2.0 \
-		memchr-2.7.6 \
+		memchr-2.8.0 \
 		memmem-0.1.1 \
 		memoffset-0.9.1 \
 		minimal-lexical-0.2.1 \
@@ -234,36 +240,37 @@ CARGO_CRATES=	adler2-2.0.1 \
 		os_pipe-1.2.3 \
 		outref-0.5.2 \
 		owo-colors-4.2.3 \
-		oxc-browserslist-2.2.0 \
+		oxc-browserslist-2.3.0 \
 		oxc-miette-2.7.0 \
 		oxc-miette-derive-2.7.0 \
-		oxc_allocator-0.110.0 \
-		oxc_ast-0.110.0 \
-		oxc_ast_macros-0.110.0 \
-		oxc_ast_visit-0.110.0 \
-		oxc_codegen-0.110.0 \
-		oxc_compat-0.110.0 \
-		oxc_data_structures-0.110.0 \
-		oxc_diagnostics-0.110.0 \
-		oxc_ecmascript-0.110.0 \
-		oxc_estree-0.110.0 \
+		oxc_allocator-0.112.0 \
+		oxc_ast-0.112.0 \
+		oxc_ast_macros-0.112.0 \
+		oxc_ast_visit-0.112.0 \
+		oxc_codegen-0.112.0 \
+		oxc_compat-0.112.0 \
+		oxc_data_structures-0.112.0 \
+		oxc_diagnostics-0.112.0 \
+		oxc_ecmascript-0.112.0 \
+		oxc_estree-0.112.0 \
 		oxc_index-4.1.0 \
-		oxc_parser-0.110.0 \
-		oxc_regular_expression-0.110.0 \
-		oxc_semantic-0.110.0 \
-		oxc_sourcemap-6.0.1 \
-		oxc_span-0.110.0 \
-		oxc_syntax-0.110.0 \
-		oxc_transformer-0.110.0 \
-		oxc_traverse-0.110.0 \
+		oxc_parser-0.112.0 \
+		oxc_regular_expression-0.112.0 \
+		oxc_semantic-0.112.0 \
+		oxc_sourcemap-6.0.2 \
+		oxc_span-0.112.0 \
+		oxc_str-0.112.0 \
+		oxc_syntax-0.112.0 \
+		oxc_transformer-0.112.0 \
+		oxc_traverse-0.112.0 \
 		parking_lot-0.12.5 \
 		parking_lot_core-0.9.12 \
 		pathdiff-0.2.3 \
 		percent-encoding-2.3.2 \
-		pest-2.8.5 \
-		pest_derive-2.8.5 \
-		pest_generator-2.8.5 \
-		pest_meta-2.8.5 \
+		pest-2.8.6 \
+		pest_derive-2.8.6 \
+		pest_generator-2.8.6 \
+		pest_meta-2.8.6 \
 		petgraph-0.8.3 \
 		phf-0.11.3 \
 		phf-0.13.1 \
@@ -279,7 +286,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		pkg-config-0.3.32 \
 		plist-1.8.0 \
 		polling-3.11.0 \
-		portable-atomic-1.13.0 \
+		portable-atomic-1.13.1 \
 		portable-pty-0.9.0 \
 		postcard-1.1.3 \
 		potential_utf-0.1.4 \
@@ -288,7 +295,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		prettyplease-0.2.37 \
 		proc-macro-crate-3.4.0 \
 		proc-macro2-1.0.106 \
-		proptest-1.9.0 \
+		proptest-1.10.0 \
 		pulldown-cmark-0.13.0 \
 		quick-error-1.2.3 \
 		quick-xml-0.38.4 \
@@ -306,13 +313,14 @@ CARGO_CRATES=	adler2-2.0.1 \
 		ratatui-crossterm-0.1.0 \
 		ratatui-termwiz-0.1.0 \
 		ratatui-widgets-0.3.0 \
+		recvmsg-1.0.0 \
 		redox_syscall-0.5.18 \
 		redox_users-0.5.2 \
 		ref-cast-1.0.25 \
 		ref-cast-impl-1.0.25 \
-		regex-1.12.2 \
-		regex-automata-0.4.13 \
-		regex-syntax-0.8.8 \
+		regex-1.12.3 \
+		regex-automata-0.4.14 \
+		regex-syntax-0.8.9 \
 		relative-path-2.0.1 \
 		ring-0.17.14 \
 		ropey-1.6.1 \
@@ -333,10 +341,10 @@ CARGO_CRATES=	adler2-2.0.1 \
 		rustls-webpki-0.103.9 \
 		rustversion-1.0.22 \
 		rusty-fork-0.3.1 \
-		ryu-1.0.22 \
+		ryu-1.0.23 \
 		same-file-1.0.6 \
-		schemars-1.2.0 \
-		schemars_derive-1.2.0 \
+		schemars-1.2.1 \
+		schemars_derive-1.2.1 \
 		scopeguard-1.2.0 \
 		self_cell-1.2.2 \
 		semver-1.0.27 \
@@ -361,9 +369,10 @@ CARGO_CRATES=	adler2-2.0.1 \
 		signal-hook-registry-1.4.8 \
 		simd-adler32-0.3.8 \
 		similar-2.7.0 \
-		siphasher-1.0.1 \
+		siphasher-1.0.2 \
 		smallvec-1.15.1 \
 		smawk-0.3.2 \
+		socket2-0.6.2 \
 		stable_deref_trait-1.2.1 \
 		static_assertions-1.1.0 \
 		str_indices-0.4.4 \
@@ -376,7 +385,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		syn-2.0.114 \
 		synstructure-0.13.2 \
 		syntect-5.3.0 \
-		tempfile-3.24.0 \
+		tempfile-3.25.0 \
 		termcolor-1.4.1 \
 		terminfo-0.9.0 \
 		termios-0.3.3 \
@@ -387,9 +396,9 @@ CARGO_CRATES=	adler2-2.0.1 \
 		thiserror-impl-1.0.69 \
 		thiserror-impl-2.0.18 \
 		thread_local-1.1.9 \
-		time-0.3.46 \
+		time-0.3.47 \
 		time-core-0.1.8 \
-		time-macros-0.2.26 \
+		time-macros-0.2.27 \
 		tiny_http-0.12.0 \
 		tinystr-0.7.6 \
 		tinystr-0.8.2 \
@@ -400,7 +409,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		toml_datetime-0.7.5+spec-1.1.0 \
 		toml_edit-0.22.27 \
 		toml_edit-0.23.10+spec-1.0.0 \
-		toml_parser-1.0.6+spec-1.1.0 \
+		toml_parser-1.0.7+spec-1.1.0 \
 		toml_write-0.1.2 \
 		tracing-0.1.44 \
 		tracing-attributes-0.1.31 \
@@ -415,12 +424,12 @@ CARGO_CRATES=	adler2-2.0.1 \
 		tree-sitter-cpp-0.23.4 \
 		tree-sitter-css-0.25.0 \
 		tree-sitter-go-0.25.0 \
-		tree-sitter-highlight-0.26.3 \
+		tree-sitter-highlight-0.26.5 \
 		tree-sitter-html-0.23.2 \
 		tree-sitter-java-0.23.5 \
 		tree-sitter-javascript-0.25.0 \
 		tree-sitter-json-0.24.8 \
-		tree-sitter-language-0.1.6 \
+		tree-sitter-language-0.1.7 \
 		tree-sitter-lua-0.4.1 \
 		tree-sitter-odin-1.3.0 \
 		tree-sitter-pascal-0.10.2 \
@@ -438,16 +447,17 @@ CARGO_CRATES=	adler2-2.0.1 \
 		unarray-0.1.4 \
 		unicase-2.9.0 \
 		unicode-id-start-1.4.0 \
-		unicode-ident-1.0.22 \
+		unicode-ident-1.0.23 \
 		unicode-linebreak-0.1.5 \
 		unicode-segmentation-1.12.0 \
 		unicode-truncate-2.0.1 \
 		unicode-width-0.2.2 \
+		unicode-xid-0.2.6 \
 		unicode_names2-2.0.0 \
 		unicode_names2_generator-2.0.0 \
 		unsafe-libyaml-0.2.11 \
 		untrusted-0.9.0 \
-		ureq-3.1.4 \
+		ureq-3.2.0 \
 		ureq-proto-0.5.3 \
 		url-2.5.8 \
 		urlencoding-2.1.3 \
@@ -455,7 +465,7 @@ CARGO_CRATES=	adler2-2.0.1 \
 		utf16_iter-1.0.5 \
 		utf8_iter-1.0.4 \
 		utf8parse-0.2.2 \
-		uuid-1.19.0 \
+		uuid-1.20.0 \
 		valuable-0.1.1 \
 		version_check-0.9.5 \
 		vsimd-0.8.0 \
@@ -466,10 +476,14 @@ CARGO_CRATES=	adler2-2.0.1 \
 		walkdir-2.5.0 \
 		wasi-0.11.1+wasi-snapshot-preview1 \
 		wasip2-1.0.2+wasi-0.2.9 \
+		wasip3-0.4.0+wasi-0.3.0-rc-2026-01-06 \
 		wasm-bindgen-0.2.108 \
 		wasm-bindgen-macro-0.2.108 \
 		wasm-bindgen-macro-support-0.2.108 \
 		wasm-bindgen-shared-0.2.108 \
+		wasm-encoder-0.244.0 \
+		wasm-metadata-0.244.0 \
+		wasmparser-0.244.0 \
 		wayland-backend-0.3.12 \
 		wayland-client-0.31.12 \
 		wayland-protocols-0.32.10 \
@@ -477,13 +491,14 @@ CARGO_CRATES=	adler2-2.0.1 \
 		wayland-scanner-0.31.8 \
 		wayland-sys-0.31.8 \
 		web-time-1.1.0 \
-		webpki-roots-1.0.5 \
+		webpki-roots-1.0.6 \
 		wezterm-bidi-0.2.3 \
 		wezterm-blob-leases-0.1.1 \
 		wezterm-color-types-0.3.0 \
 		wezterm-dynamic-0.2.1 \
 		wezterm-dynamic-derive-0.1.1 \
 		wezterm-input-types-0.1.0 \
+		widestring-1.2.1 \
 		winapi-0.3.9 \
 		winapi-i686-pc-windows-gnu-0.4.0 \
 		winapi-util-0.1.11 \
@@ -524,6 +539,11 @@ CARGO_CRATES=	adler2-2.0.1 \
 		winnow-0.7.14 \
 		winreg-0.10.1 \
 		wit-bindgen-0.51.0 \
+		wit-bindgen-core-0.51.0 \
+		wit-bindgen-rust-0.51.0 \
+		wit-bindgen-rust-macro-0.51.0 \
+		wit-component-0.244.0 \
+		wit-parser-0.244.0 \
 		wl-clipboard-rs-0.9.3 \
 		write16-1.0.0 \
 		writeable-0.5.5 \
@@ -535,8 +555,8 @@ CARGO_CRATES=	adler2-2.0.1 \
 		yoke-0.8.1 \
 		yoke-derive-0.7.5 \
 		yoke-derive-0.8.1 \
-		zerocopy-0.8.33 \
-		zerocopy-derive-0.8.33 \
+		zerocopy-0.8.39 \
+		zerocopy-derive-0.8.39 \
 		zerofrom-0.1.6 \
 		zerofrom-derive-0.1.6 \
 		zeroize-1.8.2 \
@@ -545,4 +565,4 @@ CARGO_CRATES=	adler2-2.0.1 \
 		zerovec-0.11.5 \
 		zerovec-derive-0.10.3 \
 		zerovec-derive-0.11.2 \
-		zmij-1.0.16
+		zmij-1.0.20
