--- a/devel/py-setuptools-scm8/Makefile
+++ b/devel/py-setuptools-scm8/Makefile
@@ -1,9 +1,10 @@
 PORTNAME=	setuptools-scm
-PORTVERSION=	8.0.4
+PORTVERSION=	8.1.0
 CATEGORIES=	devel python
 MASTER_SITES=	PYPI
 PKGNAMEPREFIX=	${PYTHON_PKGNAMEPREFIX}
 PKGNAMESUFFIX=	8
+DISTNAME=	${PORTNAME:C/[-_.]+/_/g}-${DISTVERSION}
 
 MAINTAINER=	python@FreeBSD.org
 COMMENT=	Setuptools plugin to manage your versions by scm tags
@@ -18,8 +19,7 @@ BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}setuptools>=61:devel/py-setuptools@${PY_FL
 		${PYTHON_PKGNAMEPREFIX}wheel>=0:devel/py-wheel@${PY_FLAVOR}
 RUN_DEPENDS=	${PYTHON_PKGNAMEPREFIX}packaging>=20:devel/py-packaging@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}setuptools>=0:devel/py-setuptools@${PY_FLAVOR} \
-		${PY_TOMLI} \
-		${PYTHON_PKGNAMEPREFIX}typing-extensions>=0:devel/py-typing-extensions@${PY_FLAVOR}
+		${PY_TOMLI}
 TEST_DEPENDS=	git:devel/git \
 		gpg2:security/gnupg \
 		${PY_MERCURIAL} \
@@ -27,7 +27,8 @@ TEST_DEPENDS=	git:devel/git \
 		${PYTHON_PKGNAMEPREFIX}mypy>=0:devel/py-mypy@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}pip>=0:devel/py-pip@${PY_FLAVOR} \
 		${PYTHON_PKGNAMEPREFIX}rich>=0:textproc/py-rich@${PY_FLAVOR} \
-		${PYTHON_PKGNAMEPREFIX}setuptools_scm_git_archive>=0:devel/py-setuptools_scm_git_archive@${PY_FLAVOR}
+		${PY_TYPING_EXTENSIONS}
+#		${PYTHON_PKGNAMEPREFIX}setuptools_scm_git_archive>=0:devel/py-setuptools_scm_git_archive@${PY_FLAVOR}
 
 USES=		python
 USE_PYTHON=	autoplist concurrent pep517 pytest
@@ -37,10 +38,12 @@ PORTSCOUT=	ignore:1
 
 # test_git_worktree_support		sometimes relative path results
 # test_dump_version_on_old_python	python 3.7 not available
+# test_dump_version_mypy		python 3.8 not available
 # test_not_owner			requires passwordless sudo access
 # test_case_mismatch_on_windows_git	we're not on Windows
 PYTEST_BROKEN_TESTS=	test_git_worktree_support
 PYTEST_IGNORED_TESTS=	test_dump_version_on_old_python \
+			test_dump_version_mypy \
 			test_not_owner \
 			test_case_mismatch_on_windows_git
 
